changed lat and lon to fit the injected data script to add the data.csv
